# oiio-python

./: .gitignore  LICENSE-GPL  MANIFEST.in  README.md  linux_before_all.sh  macos_fix_shared_libs.py  publish_on_pypi.py  pyproject.toml  setup.py  test.py
.github/workflows/: build_aarch64_wheels.yml  build_linux_aarch64_wheels.yml  build_linux_wheels.yml  build_static_wheels.yml  build_wheels.yml
licenses/: imath-LICENSE  libheif-LICENSE  libjpeg-LICENSE  libjpegturbo-LICENSE  libtiff-LICENSE  ptex-LICENSE  pystring-LICENSE
oiio_python/loaders/: ocio_loader.py  ocio_loader_win.py  oiio_loader.py  oiio_loader_win.py
oiio_python/recipes/dependencies/bzip2/: conandata.yml  conanfile.py  config.yml
oiio_python/recipes/dependencies/bzip2/all/: CMakeLists.txt
oiio_python/recipes/dependencies/bzip2/all/patches/: 0001-fix-sys-stat-include.patch
oiio_python/recipes/dependencies/bzip2/all/test_package/: CMakeLists.txt
oiio_python/recipes/dependencies/bzip2/test_package/: conanfile.py  test_package.c
oiio_python/recipes/dependencies/libjxl/: conan_deps.cmake  conandata.yml  conanfile.py
oiio_python/recipes/dependencies/libjxl/test_package/: CMakeLists.txt  conanfile.py  test_package.c
oiio_python/recipes/dependencies/libraw/: CMakeLists.txt  conandata.yml  conanfile.py
oiio_python/recipes/dependencies/libraw/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
oiio_python/recipes/dependencies/libtiff/: conandata.yml  conanfile.py
oiio_python/recipes/dependencies/libtiff/patches/: 4.5.1-0001-cmake-dependencies.patch
oiio_python/recipes/dependencies/libtiff/test_package/: CMakeLists.txt  conanfile.py  test_package.c
oiio_python/recipes/dependencies/libuhdr/: conandata.yml  conanfile.py
oiio_python/recipes/dependencies/libuhdr/patches/: 1.3.0-0001-fix-policy.patch
oiio_python/recipes/dependencies/libuhdr/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
oiio_python/recipes/opencolorio/: conandata.yml  conanfile.py
oiio_python/recipes/opencolorio/patches/: 2.2.1-0001-fix-cmake-source-dir-and-targets.patch  2.2.1-0002-fix-pystring.patch  2.2.1-0003-strlen.patch  2.2.1-0004-bindwin.patch  2.4.0-0001-fix-cmake-source-dir-and-targets.patch
oiio_python/recipes/opencolorio/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
oiio_python/recipes/openimageio/: __init__.py  conandata.yml  conanfile.py
oiio_python/recipes/openimageio/patches/: 2.5.12.0-001-cmake-targets.patch  2.5.12.0-002-disable-python-install.patch  2.5.12.0-003-fix-libraw.patch  2.5.12.0-004-change-output-name.patch  2.5.12.0-005-fix-find-python.patch  3.0.1.0-001-fix-conan-build.patch  3.0.10.0-001-fix-conan-build.patch  3.0.2.0-001-fix-conan-build.patch  3.0.3.1-001-fix-conan-build.patch  3.0.4.0-001-fix-conan-build.patch  3.0.6.0-001-fix-conan-build.patch  3.0.7.0-001-fix-conan-build.patch  3.0.8.1-001-fix-conan-build.patch
oiio_python/recipes/openimageio/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
oiio_python/tool_wrappers/: ocio_tools.py  ocio_tools_win.py  oiio_tools.py  oiio_tools_win.py
setuputils/: __init__.py  build_dependencies.py  build_packages.py  build_utils.py  linux_before_all.sh  macos_fix_shared_libs.py
