[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "wheel",
  "conan==2.4.0",
  "numpy>=1.21.2,<2.3.0",
]

# =======================[ CIBUILDWHEEL ]======================

[tool.cibuildwheel]
build-frontend = {name = "build"}
skip = [
  "pp*", # Disable building PyPy wheels on all platforms
  "*-win32", # Skip 32-bit builds
  "*-manylinux_i686", # Skip 32-bit builds
  "cp313-win_amd64", # FindPython issue on cibuildwheels on 3.13 Windows
]
test-command = "python {project}/test.py"


[tool.cibuildwheel.macos]
before-all = [
  "python {project}/setuputils/build_dependencies.py",
]
repair-wheel-command = [
  "export REPAIR_LIBRARY=$PROJECT_ROOT/oiio_python/libs:$DYLD_LIBRARY_PATH",
  "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY delocate-wheel -w {dest_dir} -v {wheel} -e \"$HOME/.conan2\"",
]

[tool.cibuildwheel.linux]
before-all = [
  "chmod +x {project}/setuputils/linux_before_all.sh",
  "bash {project}/setuputils/linux_before_all.sh",
  "python {project}/setuputils/build_dependencies.py",
]
repair-wheel-command = [
  "export LD_LIBRARY_PATH=/project/oiio_python/libs:$LD_LIBRARY_PATH",
  "auditwheel repair -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.windows]
before-all = [
  "python {project}/setuputils/build_dependencies.py",
]